# 3d-lidar-localization

./: .gitignore  README.md
src/icp_2d_nav_stack/icp_2d_planning/: CMakeLists.txt  package.xml
src/icp_2d_nav_stack/icp_2d_planning/config/: planner.yaml
src/icp_2d_nav_stack/icp_2d_planning/include/icp_2d_planning/: collision_checker.hpp  config.hpp  heuristic.hpp  hybrid_astar.hpp  motion_primitives.hpp  node3d.hpp  path_smoother.hpp  reeds_shepp.hpp  types.hpp
src/icp_2d_nav_stack/icp_2d_planning/launch/: planning.launch.py
src/icp_2d_nav_stack/icp_2d_planning/src/: collision_checker.cpp  heuristic.cpp  hybrid_astar.cpp  path_smoother.cpp  planner_node.cpp  reeds_shepp.cpp
src/ipb_ros2_sim/: CMakeLists.txt
src/ipb_ros2_sim/config/: robot_config.yaml
src/ipb_ros2_sim/config/bridge/: robot_config.yaml
src/ipb_ros2_sim/config/rviz/: sim.rviz
src/ipb_ros2_sim/config/simulation/: indoor.yaml
src/ipb_ros2_sim/description/actors/female/: female.dae
src/ipb_ros2_sim/description/husky/urdf/: husky.urdf.xacro
src/ipb_ros2_sim/description/jackal/urdf/: jackal.urdf.xacro
src/ipb_ros2_sim/description/plates/meshes/: ipb.stl  robot0.stl  robot1.stl  robot2.stl  robot3.stl  robot4.stl  robot5.stl  robot6.stl  robot7.stl  robot8.stl  robot9.stl
src/ipb_ros2_sim/description/sensors/meshes/: 1010_profile.stl
src/ipb_ros2_sim/launch/: all.launch.py
src/ipb_ros2_sim/nodes/: odom_tf_publisher.py
src/ipb_ros2_sim/world/agri_world/: agri.world
src/ipb_ros2_sim/world/agri_world/models/brick_box_3x1x3/meshes/: simple_box.dae
src/ipb_ros2_sim/world/agri_world/models/courgette_02/mesh/: courgette_02.dae
src/ipb_ros2_sim/world/agri_world/models/drc_practice_2x4/meshes/: 2x4x48.dae
src/ipb_ros2_sim/world/empty_world/: empty.world
src/ipb_ros2_sim/world/office_world/: office.world
src/ipb_ros2_sim/world/office_world/models/office_box/meshes/: office_box.dae
src/opensource_2d_nav_stack/opensource_2d_control/: CMakeLists.txt  package.xml
src/opensource_2d_nav_stack/opensource_2d_control/config/: control.yaml
src/opensource_2d_nav_stack/opensource_2d_control/launch/: control.launch.py
src/opensource_2d_nav_stack/opensource_2d_localization/: CMakeLists.txt  package.xml
src/opensource_2d_nav_stack/opensource_2d_localization/config/: amcl.yaml
src/opensource_2d_nav_stack/opensource_2d_localization/launch/: localization.launch.py
src/opensource_2d_nav_stack/opensource_2d_localization/maps/: map_002.pgm  map_002.yaml  office_map.pgm  office_map.yaml
src/opensource_2d_nav_stack/opensource_2d_mapping/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/opensource_2d_nav_stack/opensource_2d_mapping/config/: cartographer.lua
src/opensource_2d_nav_stack/opensource_2d_mapping/launch/: cartographer.launch.py  save_map.launch.py
src/opensource_2d_nav_stack/opensource_2d_mapping/scripts/: save_map.py
src/opensource_2d_nav_stack/opensource_2d_planning/: CMakeLists.txt  package.xml
src/opensource_2d_nav_stack/opensource_2d_planning/config/: planning.yaml
src/opensource_2d_nav_stack/opensource_2d_planning/launch/: planning.launch.py
