<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opensource_2d_mapping</name>
  <version>0.0.0</version>
  <description>Mapping package for the opensource 2D navigation stack</description>
  <maintainer email="noelinnocent369@gmail.com">noel</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
